--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 board_build.partitions = min_spiffs.csv
 framework = arduino
-; Custom Serial Monitor port
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
-lib_deps = tinyu-zhao/INA3221@^0.0.1
+lib_deps =
+	tinyu-zhao/INA3221@^0.0.1
